syntax = "proto3";

package ReferralService;

service ReferralService {
  rpc saveReferralCode (saveReferralCodeRequest) returns (saveReferralCodeResponse);
  
}

message EmptyResponse {

}


message saveReferralCodeRequest {
  string refereeUserId = 1;
  string referrerUserId = 2;
  string email = 3;
  string refereeCode = 4;
  string referrerCode = 5;
  string ipAddress = 6;
}

message saveReferralCodeResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
  EmptyResponse data = 4; 
}


